# c2s-mini

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  test_data_simple.py  test_model_basic.py  test_phase1.py  test_phase2.py  test_utils_simple.py
c2s_mini/: __init__.py  data.py  model.py  prompts.py  tasks.py  utils.py
docs/: API.md  TROUBLESHOOTING.md  USAGE_GUIDE.md
examples/: basic_usage.ipynb  cell_type_prediction.ipynb
tests/: README.md  __init__.py  conftest.py  test_data.py  test_model.py  test_prompts.py  test_tasks.py  test_utils.py
