[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "c2s-mini"
version = "0.1.0"
description = "Miniature implementation of Cell2Sentence for single-cell analysis with LLMs"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "c2s-mini contributors"}
]
keywords = ["single-cell", "transcriptomics", "llm", "cell2sentence"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "anndata>=0.8.0",
    "scanpy>=1.9.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "tqdm>=4.62.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/salzcamino/c2s-mini"
Repository = "https://github.com/salzcamino/c2s-mini"
Documentation = "https://github.com/salzcamino/c2s-mini/blob/main/CLAUDE.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["c2s_mini*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
